--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1"
   },
   "devDependencies": {
